--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -107,7 +107,8 @@
             background-color: $secondary-color;
             position: absolute;
             top: 190%;
-            left: 0;
+            left: 50%;
+            transform: translatex(-50%);
             padding: 1rem 2rem;
             border-bottom-right-radius: 0.5rem;
             border-bottom-left-radius: 0.5rem;
